@@ -111,8 +111,8 @@ module Capistrano
       end
       private :protect
 
-      def respond_to_with_variables?(sym) #:nodoc:
-        @variables.has_key?(sym) || respond_to_without_variables?(sym)
+      def respond_to_with_variables?(sym, include_priv=false) #:nodoc:
+        @variables.has_key?(sym) || respond_to_without_variables?(sym, include_priv)
       end
 
       def method_missing_with_variables(sym, *args, &block) #:nodoc:
