@@ -1,5 +1,7 @@
 == (unreleased)
 
+* Allow respond_to?() method to accept optional second parameter (include_priv) [Mathias Meyer]
+
 * Make sure sudo prompts are retried correctly even if "try again" and the prompt appear in the same text chunk from the server [Jamis Buck]
 
 * Add supported environment variables to -H output [François Beausoleil]
